--- a/20240522/index.html
+++ b/20240522/index.html
@@ -6,6 +6,82 @@
     <title>Document</title>
 </head>
 <body>
-    <p>테스트입라고요</p>
+
+    <div>나는 div다.</div> <!--블럭 태그  -->
+    <span>나는 span다.</span> <!--인라인 태그 -->
+
+    <div title="예시" style="background-color: gold;">
+        <span>뉴스</span>
+        <span>스포츠</span>
+        <span>게임</span>
+    </div>
+
+    <span>
+        <div align="center">뉴스</div>
+        <div>스포츠</div>
+        <div>게임</div>
+    </span>
+
+    <h1>
+        <span>뉴스</span>
+        <span>스포츠</span>
+        <span>게임</span>
+    </h1>
+    <h2>아침</h2>
+    <h3>저녁</h3>
+    <address>
+        우리집 앞마당에 아무것도 없다
+    </address>
+    <em> 나는 그웬</em>
+    <b> 네 바나나 굵다</b>
+    <strong>단락에서 특정 단어를 강조하고 싶을때 쓴다</strong>
+    <div>
+        나는 구름이다.
+        오늘도 자유자적
+    </div>
+    <pre> EM과 strong과 다르게 밑으로 내려와서 표시됨
+        뭉게뭉게
+        나는 구름이다.
+        오늘도 자유자적
+        뭉게뭉게
+        게뭉게뭉
+    </pre> <!--pre 태그에선 엔터를 사용해 줄바꿈도 띄어쓰기도 가능하다.-->
+
+    <P> 단락이라는 뜻을 가진 태그입니다 다른 영역의 글과 구분할 때 사용도 합니다 문장에 주로 쓰입니다 위 아래 마진을 가지고 있습니다</P>
+
+    <p>오늘 아침 길을 가다가 <q>고양이</q>를 보았다. <br>
+        <blockquote>복실 복실한 털을 가지고 있는 그 지저분한 녀석은</blockquote> <br>
+        <strong>스스럼없이</strong> <ins>내게 다가와</ins> 집사로 임명하겠다는 의지를 보인다. <br>
+        <hr>
+        <del>무서운 <kbd>녀석</kbd> 그렇지만</del> <mark><sup>귀여워서</sup></mark> 유혹에 넘어갈 뻔 했다.
+    </p>
+
+    <!-- 리스트 태그 -->
+    <!--목록으로 보여주는 태그 단 <li> 와 같이 사용되어야 한다.-->
+    <ul type="square"> <!--타입 설정에 따라 앞에 보여지는 기호가 달라진다-->
+        <li>가위</li>
+        <li>바위</li>
+        <li>보</li>
+        <li>동그라미</li>
+    </ul>
+
+    <h3>태양을 찬양해라</h3>
+    <ol type="A">
+        <li>태양</li>
+        <li>만세</li>
+        <li>솔라</li>
+    </ol>
+
+    <h3>소울</h3>
+    <dl>
+        <dt>다크소울</dt>
+        <dd>세키로</dd>
+        <dd>데몬즈소울</dd>
+        <dd>엘든링</dd>
+        <dt>블러드본</dt>
+        <dd>p의 거짓</dd>
+        <dd>퍼스트 버서커 카잔</dd>
+        <dd>할로우 나이트</dd>
+    </dl>
 </body>
 </html>
