div를 이용한 구조배치 공부

--- a/20240523/div.html
+++ b/20240523/div.html
@@ -54,12 +54,16 @@
 
         #content{
             width: 700px;
+            margin-top: 40px;
             background: skyblue;
+            padding: 40px;
+            box-sizing:border-box;
         }
 
         #item1{
             height: 100px;
             background: orange;
+            margin-bottom: 20px;
         }
 
         #item2{
