--- a/20240523/과제1.html
+++ b/20240523/과제1.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>과제1</title>
 
-
-
+<link rel="stylesheet" type="text/css" href="과제1.css">
 
 </head>
 
@@ -15,9 +14,23 @@
 
 <body>
 
-    <div class="content_box">
+    <div class="web_page">
 
-        <div></div>
+        <div id="menu_slide">
+            <div class="menu">메뉴 부분</div>
+            <div class="slide">슬라이드 이미지</div>
+        </div>
+
+        <div id="contents">
+            <div class="contents_box">
+                <div class="contents1">콘텐츠 1</div>
+                <div class="contents2">콘텐츠 2</div>
+            </div>
+        </div>
+        
+        <div id="foot_box">
+            <div class="foot">FOOT</div>
+        </div>
 
     </div>
 
