예제 풀이 및 수정

--- a/20240524/자리배치.html
+++ b/20240524/자리배치.html
@@ -13,14 +13,14 @@
 {
     width: 800px;
     padding: 40px 20px 20px 20px;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     background-color: blue;
     box-sizing: border-box;
 }
 
 .box_top
 {
-    
+    width: 100%; /*부모의 width를 그대로 사용하겠다 라는 의미*/
 }
 
 .box_top_one, .box_top_two, .box_top_three
@@ -60,7 +60,7 @@
 
 .box_bottom_bg
 {
-    width: 755px;
+    width: 750px;
     height: 100px;
     padding: 10px 20px 10px 20px;
     margin-top: 20px;
