--- a/20240523/div2.html
+++ b/20240523/div2.html
@@ -104,7 +104,7 @@
                 <div class="box1_2"></div>
         
                     <div class="span_box">
-                        <span class="box1_3">display:inline-block</span><span class="box1_4"></span></div>
+                        <span class="box1_3">display:inline-block</span><span class="box1_4">display:inline-block</span></div>
                     </div>
         </div>
 
