포지션 연습

--- a/20240524/자리배치.html
+++ b/20240524/자리배치.html
@@ -23,10 +23,12 @@
     width: 100%; /*부모의 width를 그대로 사용하겠다 라는 의미*/
 }
 
+
 .box_top_one, .box_top_two, .box_top_three
 {
     width: 230px;
     height: 300px;
+    /* width: 32% */
 }
 
 .box_top_one
