--- a/20240524/position.html
+++ b/20240524/position.html
@@ -14,7 +14,15 @@
             box-sizing: border-box;
         }
 
-        #box1, #box2
+        #parent1
+        {
+            position: relative;
+            margin-top: 100px;
+            margin-left: 50px;
+            /* background-color: black; */
+        }
+
+        #box1, #box2, #box3, #box4
         {
             width: 300px;
             height: 300px;
@@ -22,23 +30,39 @@
 
         #box1
         {
+            /* position: absolute; */
             background-color: blue;
         }
 
         #box2
         {
-            background-color: yellow;
-            position: relative;
-            top: 0;
+            position: relative; 
             left: 300px;
+            background-color: yellow;
+            
+            
         }
 
+        #box3
+        {
+            position: relative; 
+            left: 600px;
+            background-color: red;
+        }
+
+        #box4
+        {
+            position: absolute;
+            top: 0;
+            left: 600px;
+            background-color: chocolate;
+        }
     </style>
 </head>
 
-
-
-
+<!-- 부모의 높이 900px 유지할것 -->
+<!-- relative는 부모 높이에 영향을 줌 -->
+<!-- absolute는 부모 높이에 영향을 주지 않음 -->
 
 
 
@@ -46,8 +70,12 @@
 
 <body>
 
-    <div id="box1"></div>
-    <div id="box2"></div>
+    <div id="parent1">
+        <div id="box1"></div>
+        <div id="box2"></div>
+        <div id="box3"></div>
+        <div id="box4"></div>
+    </div>
 
 </body>
 </html>
