과제 피드백 및 현재 html 제목 변경함

--- a/20240526/5월24일과제.html
+++ b/20240526/5월24일과제.html
@@ -39,7 +39,6 @@
             margin-left: 30px;
             background-image: url(lefthamburger.png);
             background-repeat: no-repeat;
-            /* background-size: cover; */
             display: inline-block;
         }
 
@@ -81,6 +80,16 @@
             background-image: url(987-bmw-m3-front-main-172x216-crop-q72.jpg);
         }
 
+        .img5_target_box
+        {
+            position: relative;
+            bottom: 460px;
+            right: 10px;
+            width: 100px;
+            height: 115px;
+            border: 1px solid black;
+            border-radius: 5px;
+        }
         .img5
         {
             background-image: url(mercedes-g-wagon-lp5000-2-172x216-crop-q72.jpg);
@@ -280,6 +289,7 @@
             <div class="car_img img6"></div>
             <div class="car_img img7"></div>
             <div class="car_img img8"></div>
+            <div class="img5_target_box"></div>
         </div>
 
         <div class="main_text">
@@ -306,7 +316,7 @@
         
         <div class="right_hamburger">
             <div class="right_hamburger_img"></div>
-            <p class="menu_name">Menu</p>
+            <div class="menu_name">Menu</div>
         </div>
 
         <div class="category">
