이미지 파일 첨부

--- a/20240529과제/papago.html
+++ b/20240529과제/papago.html
@@ -11,6 +11,7 @@
     <div class="wrap">
         <div class="header">
             <div class="header_inner">
+                <div class="logo_image"></div>
                 <h1 class="logo">papago</h1>
                 <ul class="gnb_menu">
                     <li>
@@ -28,6 +29,7 @@
                     <div class="btn_save_wrap"></div>
                     <div class="btn_setting_wrap"></div>
                     <div class="gnb_wrap"></div>
+                    <div class="hamburger"></div>
                 </div>
             </div>
         </div>
