과제 중간 단계

--- a/20240529과제/papago.html
+++ b/20240529과제/papago.html
@@ -11,29 +11,22 @@
     <div class="wrap">
         <div class="header">
             <div class="header_inner">
-                <div class="logo_image"></div>
-                <h1 class="logo">papago</h1>
-                <ul class="gnb_menu">
-                    <li>
-                        <span>웹사이트 번역</span>
-                    </li>
-                    <li>
-                        <span>문서 번역</span>
-                    </li>
-                    <li>
-                        <span>사전</span>
-                    </li>
-                </ul>
-                <div class="papago_gnb_wrap">
-                    <div class="btn_window_wrap"></div>
-                    <div class="btn_save_wrap"></div>
-                    <div class="btn_setting_wrap"></div>
-                    <div class="gnb_wrap"></div>
-                    <div class="hamburger"></div>
+                <div class="nav_box">
+                    <div class="logo_image"></div>
+                    <h1 class="logo">papago</h1>
+                    <span>웹사이트 번역</span>
+                    <span>문서 번역</span>
+                    <span>사전</span>
+                    <div class="gnb_image_box">
+                        <div class="btn_window_wrap gnb_wrap_image"></div>
+                        <div class="btn_save_wrap gnb_wrap_image"></div>
+                        <div class="btn_setting_wrap gnb_wrap_image"></div>
+                        <div class="gnb_wrap gnb_wrap_image"></div>
+                        <div class="hamburger gnb_wrap_image"></div>
+                    </div>
                 </div>
             </div>
         </div>
-
         <div class="content">
             <div class="translate_area">
                 <div class="translate_box box1">
@@ -47,7 +40,7 @@
                     <duv class="btn_toolabr">
                         <div class="btn_sound"></div>
                         <div class="btn_copy"></div>
-                        <div class="btn_translation"></div>
+                        <div class="btn_translation">번역하기</div>
                     </duv>
                 </div>
                 <div class="translate_box box2">
@@ -65,6 +58,6 @@
             </div>
             <div class="boundary"></div>
         </div>
-    </div>
+    
 </body>
 </html>
