--- a/20240529과제/papago.html
+++ b/20240529과제/papago.html
@@ -31,8 +31,8 @@
             <div class="translate_area">
                 <div class="translate_box box1">
                     <div class="lang_select">
-                        <span>언어감지 &#8897;</span>
-                        <span>&#8652;</span>
+                        <span class="lang text">언어감지 &#8897;</span>
+                        <span class="sign text">&#8652;</span>
                     </div>
                     <div class="source_edit_area">
                         <textarea class="edit_box" placeholder="번역할 내용을 입력하세요"></textarea>
@@ -40,12 +40,14 @@
                     <duv class="btn_toolabr">
                         <div class="btn_sound"></div>
                         <div class="btn_copy"></div>
-                        <div class="btn_translation">번역하기</div>
+                        <div class="btn_translation_box">
+                            <span class="btn_translation">번역하기</span>
+                        </div>
                     </duv>
                 </div>
                 <div class="translate_box box2">
                     <div class="lang_select">
-                        <span>한국어 &#8897;</span>
+                        <span class="lang">영어 &#8897;</span>
                     </div>
                     <div class="source_edit_area"></div>
                     <duv class="btn_toolabr">
