과제 html 태그 생성 및 이미지 추가

--- a/20240530과제/flex과제.html
+++ b/20240530과제/flex과제.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5월 30일 과제</title>
-</head>
-<body>
     <link rel="stylesheet" type="text/css" href="./static/css/flex과제.css">
+</head>
+
+
+<body>
+    <div id="container">
+        <div class="image_box box1">
+            <img class="image img1" src="" alt="">
+            <img class="image img2" src="" alt="">
+            <img class="image img3" src="" alt="">
+        </div>
+        <div class="image_box box2">
+            <img class="image img1" src="" alt="">
+            <img class="image img2" src="" alt="">
+            <img class="image img3" src="" alt="">
+        </div>
+        <div class="image_box box3">
+            <img class="image img1" src="" alt="">
+            <img class="image img2" src="" alt="">
+            <img class="image img3" src="" alt="">
+        </div>
+    </div>
 </body>
 </html>
