--- a/20240530/flex_test2.html
+++ b/20240530/flex_test2.html
@@ -16,7 +16,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            /* gap: 10px; */dsd
+            /* gap: 10px; */
         }
         img
         {
