--- a/20240530과제/flex과제.html
+++ b/20240530과제/flex과제.html
@@ -10,17 +10,17 @@
 
 <body>
     <div id="container">
-        <div class="image_box box1">
+        <div id="image_box box1">
             <img class="image img1" src="" alt="">
             <img class="image img2" src="" alt="">
             <img class="image img3" src="" alt="">
         </div>
-        <div class="image_box box2">
+        <div id="image_box box2">
             <img class="image img1" src="" alt="">
             <img class="image img2" src="" alt="">
             <img class="image img3" src="" alt="">
         </div>
-        <div class="image_box box3">
+        <div id="image_box box3">
             <img class="image img1" src="" alt="">
             <img class="image img2" src="" alt="">
             <img class="image img3" src="" alt="">
