과제 중간 저장

--- a/20240530과제/flex과제.html
+++ b/20240530과제/flex과제.html
@@ -10,17 +10,17 @@
 
 <body>
     <div id="container">
-        <div id="image_box box1">
+        <div class="image_box box1">
             <img class="image img1" src="./static/image/1.jpg" alt="">
             <img class="image img2" src="./static/image/2.jpg" alt="">
             <img class="image img3" src="./static/image/3.jpg" alt="">
         </div>
-        <div id="image_box box2">
+        <div class="image_box box2">
             <img class="image img1" src="./static/image/4.jpg" alt="">
             <img class="image img2" src="./static/image/5.jpg" alt="">
             <img class="image img3" src="./static/image/6.jpg" alt="">
         </div>
-        <div id="image_box box3">
+        <div class="image_box box3">
             <img class="image img1" src="./static/image/7.jpg" alt="">
             <img class="image img2" src="./static/image/8.jpg" alt="">
         </div>
