--- a/20240530과제/자바스크립트 1일차.html
+++ b/20240530과제/자바스크립트 1일차.html
@@ -97,10 +97,10 @@
         // 실습 3.
         // 이름과 거주 도시명 , 생년월일을 입력하여 출력하세요.
 
-        name = prompt("성함은 무엇입니까?");
-        residence = prompt( "거주중인 도시 명칭은 무엇입니까?");
-        date_Of_Birth = prompt("생년월일은 어떻게 되십니까?");
-        document.write( "이름은 "+name +"이고, 거주중인 도시 이름은 "+ residence+ "이며, 생년월일은 " + date_Of_Birth+"입니다.");
+        // name = prompt("성함은 무엇입니까?");
+        // residence = prompt( "거주중인 도시 명칭은 무엇입니까?");
+        // date_Of_Birth = prompt("생년월일은 어떻게 되십니까?");
+        // document.write( "이름은 "+name +"이고, 거주중인 도시 이름은 "+ residence+ "이며, 생년월일은 " + date_Of_Birth+"입니다.");
 
 
         // 주말 동안 과제 
@@ -109,6 +109,22 @@
         // 원의 넓이 = 반지름 * 반지름 * 3.14
         // 2. 태어난 년도입력받아  현재 나이 구하기
         //  몇 년도에 태어났는데 그거랑 현재 나이 구하기 
+
+        // 올해 생일이 지나지 않았다면 이번 연도 - 출생연도 -1 = 현재 나이
+        // 문제 1
+        currentYear = 2024;
+        birthYear = prompt("태어난 년도를 입력하세요.");
+        age = currentYear - birthYear;
+        document.write("저의 현재 나이는 " + age + " 살 입니다.")
+        document.write("<hr>")
+        // 문제 2
+        radius = prompt("원의 반지름을 입력하세요:");
+        radius = Number(radius);
+        pi = 3.14;
+        circumference = 2 * pi * radius; // 원의 둘레를 계산
+        area = pi * radius * radius; //원의 넓이를 계산
+        document.write("원의 둘레는 " + circumference + "입니다.");
+        document.write("원의 넓이는 " + area + "입니다.");
 
     </script>
 </head>
