--- a/20240603과제/자바스크립트2일차_과제.html
+++ b/20240603과제/자바스크립트2일차_과제.html
@@ -7,6 +7,38 @@
 
     <script>
         
+    // 과제 1.
+    /* 소주 한 잔에 수명이 2분 단축 된다.
+    어떤 사람이 20년 동안 소주를 마셨다.
+    하루에 몇 잔씩 마시는지 입력 받기 (prompt로)
+    이 사람의 수명은 
+    1. 총 몇 분 단축 되었는가?      
+    2. 총 몇 시간 단축 되었는가?
+    3. 총 몇 일 단축 되었는가?
+    모든 값은 정수만 출력! 
+    */
+
+    drinks_Per_Day = prompt("소주를 하루에 몇 잔씩 마십니까?");
+
+    drinks_Per_Day = parseInt(drinks_Per_Day);
+
+    a_Glass_Of_Soju = 2; // 소주 한 잔
+
+    twenty_Years = 365 * 20; // 20년 
+
+    total_Drinks = twenty_Years * drinks_Per_Day; // 총 마신 양 (20년 곱하기 하루에 불특정하게 마신 잔)
+
+    total_Minutes_Lost = total_Drinks * a_Glass_Of_Soju; // 몇 분 단축 
+
+    total_Hours_Lost = Math.floor(total_Minutes_Lost / 60); // 총 몇 시간 (1시간에 60분)
+
+    total_Day_Lost = Math.floor(total_Hours_Lost / 24); // 총 몇 일 (하루에 24시간)
+
+    document.write(`이 사람의 수명 중 <br> 단축된 몇 분은 ${total_Minutes_Lost}분입니다. 적당히 드세요. <br>`);
+    document.write(`단축된 몇 시간은 ${total_Hours_Lost}시간입니다. 적당히 드세요.<br>`);
+    document.write(`단축된 몇 일은 ${total_Day_Lost}일입니다. 적당히 드세요.`);
+    // 과제 2
+    /* 두개의 주사위를 던져서 같은 값이 나온다면 당첨, 아니라면 꽝 출력 (1~6 육면 주사위) */
     </script>
 </head>
 <body>
