--- a/20240604/자바스크립트3일차_2.html
+++ b/20240604/자바스크립트3일차_2.html
@@ -90,17 +90,17 @@
 
         //  문제 2.두정수가 같은 숫자라면 같다라고 출력
 
-        // integer_1 = Number(prompt("첫 번째 정수를 입력하시오"));
-        // integer_2 = Number(prompt("두 번째 정수를 입력하시오"));
+        integer_1 = Number(prompt("첫 번째 정수를 입력하시오"));
+        integer_2 = Number(prompt("두 번째 정수를 입력하시오"));
 
-        // if(integer_1 < integer_2) {
-        //     document.write("작은수 : " + integer_1);
-        // } else {
-        //     if (integer_1 == integer_2)
-        //     document.write("같다");
-        //  else 
-        //     document.write("작은수 : " + integer_2);
-        // }
+        if(integer_1 < integer_2) {
+            document.write("작은수 : " + integer_1);
+        } else {
+            if (integer_1 == integer_2)
+            document.write("같다");
+         else 
+            document.write("작은수 : " + integer_2);
+        }
 
         //else는 필요한 경우에만 만들자.
 
