과제 끝 꿀잠 시작

--- a/20240604/자바스크립트3일차_2.html
+++ b/20240604/자바스크립트3일차_2.html
@@ -154,6 +154,37 @@
         // console.log(me > com);
         // console.log(me < com);
         // console.log(me < scissors_rock_paper);
+
+
+                // // 문제.
+        // // 가위바위보 컴퓨터랑 대결하기
+        // // 가위 - 1 ,  바위 - 2, 보 - 3 
+        // // 컴퓨터는 랜덤값 , 나는 직접 입력 (prompt)
+        // // 내가 승, 패, 비김( 나와 컴퓨터의값이 같으면 )
+  
+        // document.write("<br><br>=============== 가위바위보 게임 ============<br><br>");
+        // com = Math.floor(Math.random() *3 ) + 1;
+        // user = Number( prompt("1.가위 2.바위 3.보"));
+        
+        // 결과 = user - com;
+        // if( 결과 == 0){
+        //     document.write(" 비김 ");
+        // }else if( 결과==1 || 결과==-2){
+        //     document.write(" 나의 승리 ");
+        // }else{
+        //     document.write("나의 패배....");
+        // }
+
+
+        // if(com == user){
+        //     document.write(" 비김 ");
+        // }else if( ((user==1) && (com==3)) || ( user==2 && com==1) || (user==3 && com==2)     ){
+        //     document.write(" 나의 승리 ");
+        // }else{
+        //     document.write("나의 패배....");
+        // }
+
+        
     </script>
 </head>
 <body>
