--- a/20240607/자바스크립트5일차_2.html
+++ b/20240607/자바스크립트5일차_2.html
@@ -39,17 +39,25 @@
             예) 비밀번호가 1234 라면 1234 + 4321
         */
 
+            let one = 9;
+            let two;
+            let three;
+            let four = 7;
 
-            let one = 1;
-            let two = 1;
-            let three = 1;
-            let four = 1;
+        for(let i = 1; i<=9; i++){
 
-        const answer = 16456;
 
-            while(one <= 9) {
-                if(one == four &&)
+
+            if(i > 1 && i +2 >= 9) {
+                // console.log(i);
+            } 
+
+            if(i !== four && i < one) {
+                console.log(i);
             }
+            i++;
+        }
+
     </script>
 </head>
 <body>
