--- a/20240611/과제.html
+++ b/20240611/과제.html
@@ -4,19 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>과제</title>
-    <script>
-        /*
+        <!-- /*
         chatgpt 이용 가능(gpt가 알려준 코드 충분히 이해했다면 사용가능)
         1~50까지 숫자를 랜덤하게
         1줄에 4개씩 5줄로 표시하기
         버튼을 클릭하면 화면에 숫자들 표시
         함수 두개 사용(함수의 기능은 알아서 정하기)
         출력은 반복문 두 개를 중첩하면 충분히 가능!
-        */
+        */ -->
+        <script src="/20240611/static/javascript/과제.js"></script>
 
-    </script>
+        <style>
+        /* 숫자들을 담는 컨테이너 스타일링 */
+        .number-container {
+            display: grid; /* 그리드 레이아웃 사용 */
+            grid-template-columns: repeat(4, 1fr); /* 한 줄에 4개의 열을 생성 */
+            gap: 10px; /* 그리드 아이템 사이의 간격 */
+            max-width: 400px; /* 컨테이너의 최대 너비 */
+            margin: 20px auto; /* 컨테이너를 수평으로 중앙에 배치 */
+        }
+        /* 숫자 박스 스타일링 */
+        .number-box {
+            padding: 20px; /* 내부 여백 */
+            background-color: #f0f0f0; /* 배경색 */
+            text-align: center; /* 텍스트 중앙 정렬 */
+            font-size: 1.5em; /* 글자 크기 */
+            border: 1px solid #ccc; /* 테두리 */
+        }
+        /* 버튼 스타일링 */
+        button {
+            display: block; /* 블록 요소로 설정 */
+            margin: 20px auto; /* 버튼을 수평으로 중앙에 배치 */
+            padding: 10px 20px; /* 내부 여백 */
+            font-size: 1em; /* 글자 크기 */
+        }
+        </style>
+
+
 </head>
 <body>
-    
+    <!-- 버튼을 클릭하면 displayRandomNumbers 함수가 호출됨 -->
+    <button onclick="displayRandomNumbers()">랜덤 숫자 표시</button>
+    <!-- 숫자를 표시할 컨테이너 -->
+    <div id="numbers" class="number-container"></div>
 </body>
 </html>
