--- a/20240612/제이쿼리배우기_두번째.html
+++ b/20240612/제이쿼리배우기_두번째.html
@@ -11,7 +11,8 @@
 <body>
 
     <button id="nameInput">이름 입력</button> <input type="text" id="name"> <br>
-    <button id="nameInput">나이 입력</button> <input type="text" id="age"> <br>
+    <button id="ageInput">나이 입력</button> <input type="text" id="age"> <br>
+    <button id="enroll">등록</button>
     <hr>
     <div>
         이름 : <b id="nameView"></b> <br>
