todoList 만들기 해봄

--- a/20240613/jquery/jquery_Day2.html
+++ b/20240613/jquery/jquery_Day2.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="/20240613/static/css/notice.css">
 </head>
 <body>
-    
+
+    <input type="text" id="detail"><button disabled="disabled" id="save">등록</button>
+
     <div id="notice_wrap">
         <div id="title">
             <h3>주요 소식</h3>
@@ -20,6 +22,7 @@
             </ul>
         </div>
         <span id="more">더보기</span>
+
     </div>
 </body>
 </html>
