--- a/20240618/jquery/rps.html
+++ b/20240618/jquery/rps.html
@@ -3,12 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>가위 바위 보 게임</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="/20240618/static/javascript/rps.js"></script>
     <link rel="stylesheet" href="/20240618/static/css/rps.css">
 </head>
 <body>
-    
+    <img id="vs" src="../static/image/vs.png" alt="가위 바위 보 할 때 쓰는 대결 이미지">
+    <div id="buttonWrap">
+        <button id="game">시작</button>
+        <button id="record">전적</button>
+    </div>
+    <div id="wrap">
+        <div id="comArea" class="area">
+            <div class="rpsImg">
+                <img id="comImg">
+            </div>
+        </div>
+        <div id="userArea" class="area">
+            <div class="rpsImg">
+                <div class="userImg"><img src="../static/image/scissors.png" alt="가위"></div>
+                <div class="userImg"><img src="../static/image/rock.png" alt="바위"></div>
+                <div class="userImg"><img src="../static/image/paper.png" alt="보"></div>
+            </div>
+        </div>
+    </div>
+
+    <div id="modal" style="display: none;">
+        <div id="modalBackground"></div>
+        <div id="modalData">
+            <table id="dataTable">
+                <thead>
+                    <tr>
+                        <th class="user">유저</th>
+                        <th class="com">컴퓨터</th>
+                        <th class="outcome">결과</th>
+                    </tr>
+                </thead>
+                <tbody id="data"></tbody>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
