--- a/Create a game/game/draw.html
+++ b/Create a game/game/draw.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>그림</title>
+    <title>솔라 맞추는 게임</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="../static/javascript/draw.js"></script>
     <link rel="stylesheet" href="/../Class_HTML/Create a game/static/css/draw.css">
