--- a/20240619/javascript/object.html
+++ b/20240619/javascript/object.html
@@ -79,7 +79,27 @@ function book (t, a, y) {
         this.title = t;
         this.director = d;
         this.year = y;
+        // this.print = function() {
+        //     document.write(`<p><b>${this.title}</b> 
+        //                     <span>${this.director}</span>
+        //                     <span>${this.year}</span></p>`)
+        // } // 메소드
     }
+
+    /* 함수와 메소드 차이
+    귀속 여부 
+    function moie () {} 안에 this.print = function () {} 존재하는 print는 메소드다.
+    메소드 == 자바스크립트의 꽃 오브 꽃 - prototype
+    메모리를 절약하는 식으로 만들어야 한다.
+    */
+    
+movie.prototype.print = function(){ // 데이터와 데이터를 이어주는 체인 역활
+    document.write(`<p><b>${this.title}</b> 
+                            <span>${this.director}</span>
+                            <span>${this.year}</span></p>`);
+} // 메소드이면서 프로토타입 덕분에 계속 생성되지 않는 단 하나로서 존재할 수 있다.
+// 프로토 타입으로 만들면 모든 객체가 공통적으로 사용할 수 있다.
+
 
     // let movieList = new Array();
     let movieList = []; // movie 객체를 저장할 배열
@@ -92,12 +112,14 @@ function book (t, a, y) {
     movieList.push( new movie("인사이드 아웃1","피트 닥터",1992));
     movieList.push( new movie("대부","프랜시스 포드 코폴라",1972));
 
-    document.write( movieList[3].title+ "<br>" );
+    // document.write( movieList[3].title+ "<br>" );
     
     for( var i=0; i<movieList.length; i++){
-        document.write("<br>" + movieList[i].title + "<br>");
-        document.write(movieList[i].director + " " + movieList[i].year + "<br>");
+        // document.write("<br>" + movieList[i].title + "<br>");
+        // document.write(movieList[i].director + " " + movieList[i].year + "<br>");
+        movieList[i].print();
     }
+    // document.write("<br>" + movieList[0]);
     // 객체는 인덱스가 존재하지 않는다.
 
     /* 배열의 인덱스
@@ -105,5 +127,24 @@ function book (t, a, y) {
         모든 공간이 연속적이며, 같은 크기의 공간이어야 한다.
     */
 
-   document.write(movieList[0])
+
+    // Array.prototype.abc = function(){
+//     alert("프로토타입으로 만든 함수");
+// }
+// Document.prototype.getId = function(id,func){
+//     return document.getElementById(id).addEventListener('click', func);
+
+// }
+
+// Document.prototype.aa=100;
+
+// alert(document.aa);
+
+// document.getId("box", function(){
+
+// });
+
+// let word = new Array();
+// word.abc();
 </script>
+
