--- a/20240619/javascript/object.html
+++ b/20240619/javascript/object.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>객체</title>
+    <title>객체 첫 번째</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <!-- <script src="../static/javascript/object.js"></script> -->
     <link rel="stylesheet" href="/./20240619/static/css/object.css">
