폼 태그 기능과 데이터 전송 메소드들

--- a/20240621/HTML/link.html
+++ b/20240621/HTML/link.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>태그 a</title>
     <style>
         div
         {
@@ -35,7 +35,7 @@
         -데이터를 요청하거나 페이지를 요청할 때 사용된다. 
         (구글이나 네이버에 특정 단어를 입력해서 정보를 얻거나 타 사이트로 접속하는 것도 페이지와 데이터를 서버에 요청하는 행위.)
 
-
+        <a>는 데이터 전달이 아닌 요청을 위한 목적으로 쓰임
     -->
     <a href="https://www.naver.com"> 네이버 </a>
     <br>
