--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <a href="./Create a game/game/draw.html">지렁이게임</a>
+    <a href="./Create a game/game/draw.html">과제-지렁이게임</a>
 </body>
 </html>
