오늘 수업 끝 선생님 코드 확인하기

--- a/20240624/html/game.html
+++ b/20240624/html/game.html
@@ -13,12 +13,12 @@
     <div id="wrap">
         <div id="gameState">
             <div id="gameStart" class="">
-                <button id="start"></button>
+                <button id="start">시작</button>
             </div>
             <div id="state" class="hide">
                 <p id="score"></p>
                 <p id="step"></p>
-                <p id=""></p>
+                <p id="click"></p>
             </div>
         </div>
         <div id="gameBoard">
