--- a/20240621/HTML/link.html
+++ b/20240621/HTML/link.html
@@ -49,7 +49,7 @@
         <a href="#game">게임</a>
         <h2>여기는 영화</h2>
      </div>
-     <div id="webtoon">
+     <div id="webtoo">
         <a href="#movie">영화</a>
         <a href="#webtoon">웹툰</a>
         <a href="#game">게임</a>
